	* UCC: Added optional 'void' keyword to specify an usecode function without
	  returns (and warnings for missing that keyword). Improved handling of UCC
	  structs, and allowed them as function arguments and returns; fixed bug
	  with class member struct variables. Made #include directive include a file
	  only once, like PHP's #include_once.
	* Keyring: Added 'void' keyword to eliminate warnings.

2009-02-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/contain.cc: Prevent avatar from being dragged into containers.
	* UCC: Function calls can now be class expressions too, and be used in the
	  right hand side of a class assignment.
	* All others: Use filename definitions instead of literals.
	* Keyring: Fixed problem meditating in shrine of spirituality.

2008-11-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed problem with playing Ogg in a non-IFF endgame.dat. Fixed SI intro/
	  endgame using hardcoded paths instead of those passed to constructor.

2008-11-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/compiler/ucparse.yy: Fixing compilation errors.

2008-11-01	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/*: A few fixes to UCXT data files. New built-in constants for UCC.
	  Also, partially failed attempt at getting

2008-10-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamemgr/*: Using file names from fnames.h. Define in SI the resources used
	  by the shapes browser.
	* files/U7file.h: Documentation error.

2008-10-04	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gumps/Jawbone_gump.cc: Remove incorrect and unnecessary check.
	* all else: Fixed resources loaded from XML file. Made Game::get_resource
	  return 'const str_int_pair&' instead of 'str_int_pair'.

2008-10-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed segmentation fault on loading fonts.

2008-10-02	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* General: Doxygenified lots of code. Some reformatting. Implemented changes